<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="405dp"
        android:layout_height="332dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/specialName"
                android:layout_width="136dp"
                android:layout_height="20dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RecycleViewImage" />

            <EditText
                android:id="@+id/specialQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/qtext"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/specialPrice"
                app:layout_constraintVertical_bias="0.101" />

            <TextView
                android:id="@+id/specialToppings"
                android:layout_width="235dp"
                android:layout_height="63dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/RecycleViewImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/specialQuantity" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specialName" />

            <TextView
                android:id="@+id/specialPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/specialName" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="97dp"
                android:layout_height="145dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toEndOf="@+id/RecycleViewImage"
                app:layout_constraintTop_toBottomOf="@+id/specialToppings">

                <RadioButton
                    android:id="@+id/smallButtonSpecialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size1" />

                <RadioButton
                    android:id="@+id/mediumButtonSpecialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size2" />

                <RadioButton
                    android:id="@+id/largeButtonSpecialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size3" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Sauce"
                app:layout_constraintStart_toEndOf="@+id/RecycleViewImage"
                app:layout_constraintTop_toTopOf="@+id/sauceTypeSpecialty" />

            <TextView
                android:id="@+id/sauceTypeSpecialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/specialToppings" />

            <CheckBox
                android:id="@+id/extraCheeseBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extraCheese"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toTopOf="@+id/radioGroup" />

            <CheckBox
                android:id="@+id/ExtraSauceBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extraSauce"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/extraCheeseBox" />

            <Button
                android:id="@+id/addPizzaRecycle"
                android:layout_width="132dp"
                android:layout_height="54dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/addToOrder"
                app:layout_constraintStart_toStartOf="@+id/specialName"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/RecycleViewImage"
                android:layout_width="146dp"
                android:layout_height="125dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/alfredo_pizza" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>